Lacnic is planning RRDP

--- a/draft-bruijnzeels-deprecate-rsync-00.html
+++ b/draft-bruijnzeels-deprecate-rsync-00.html
@@ -545,7 +545,7 @@
 </tr>
 <tr>
 <td class="center">lacnic</td>
-<td class="center">no</td>
+<td class="center">planned</td>
 </tr>
 <tr>
 <td class="center">ripe ncc</td>
