Krill is under development - let's not say yet where it will be deployed..

--- a/draft-bruijnzeels-deprecate-rsync-00.html
+++ b/draft-bruijnzeels-deprecate-rsync-00.html
@@ -561,7 +561,7 @@
 </tr>
 </tbody>
 </table>
-<p id="rfc.section.5.1.p.2">(1) in use at various National Internet Registries, as well as other resource holders under RIRs.  (2) Software under development, to be deployed by NIRs and/or other resource holders under RIRs.  </p>
+<p id="rfc.section.5.1.p.2">(1) in use at various National Internet Registries, as well as other resource holders under RIRs.  (2) Software under development.  </p>
 <h1 id="rfc.section.5.2">
 <a href="#rfc.section.5.2">5.2.</a> <a href="#rrdp-support-in-relying-party-software" id="rrdp-support-in-relying-party-software">RRDP support in Relying Party software</a>
 </h1>
