Afrinic is planning support for RRDP too.

--- a/draft-bruijnzeels-deprecate-rsync-00.html
+++ b/draft-bruijnzeels-deprecate-rsync-00.html
@@ -533,7 +533,7 @@
 <tbody>
 <tr>
 <td class="center">afrinic</td>
-<td class="center">no</td>
+<td class="center">planned</td>
 </tr>
 <tr>
 <td class="center">apnic</td>
