Add routinator RRDP support info.

--- a/draft-bruijnzeels-sidrops-deprecate-rsync-01.html
+++ b/draft-bruijnzeels-sidrops-deprecate-rsync-01.html
@@ -661,8 +661,8 @@
 <tr>
 <td class="center">Routinator</td>
 <td class="center">yes</td>
-<td class="center">?</td>
-<td class="center">?</td>
+<td class="center">0.6.0</td>
+<td class="center">Sep 2019</td>
 </tr>
 <tr>
 <td class="center">rpki-client</td>
