Change rpki.net to DRL.

--- a/draft-bruijnzeels-sidrops-deprecate-rsync-01.html
+++ b/draft-bruijnzeels-sidrops-deprecate-rsync-01.html
@@ -607,7 +607,7 @@
 <td class="center">yes</td>
 </tr>
 <tr>
-<td class="center">rpki.net</td>
+<td class="center">Dragon Research Labs</td>
 <td class="center">yes(1)</td>
 </tr>
 <tr>
