--- a/draft-ietf-sidrops-prefer-rrdp-01.html
+++ b/draft-ietf-sidrops-prefer-rrdp-01.html
@@ -630,7 +630,7 @@
 <h1 id="rfc.section.3.3">
 <a href="#rfc.section.3.3">3.3.</a> <a href="#phase-2--all-rp-software-prefers-rrdp" id="phase-2--all-rp-software-prefers-rrdp">Phase 2 - All RP software prefers RRDP</a>
 </h1>
-<p id="rfc.section.3.3.p.1">Once all Repositories support RRDP we can proceed to make RRDP mandatory to implement for Relying Party software. But note that RP software is not prohibited from implementing this support sooner. At the time of this writing all know RP software supports RRDP, although it is not known to the authors whether all of them have RRDP enabled and use it as the preferred protocol.  </p>
+<p id="rfc.section.3.3.p.1">Once all Repositories support RRDP we can proceed to make RRDP mandatory to implement for Relying Party software. But note that RP software is not prohibited from implementing this support sooner. At the time of this writing all known RP software supports RRDP, although it is not known to the authors whether all of them have RRDP enabled and use it as the preferred protocol.  </p>
 <h1 id="rfc.section.3.3.1">
 <a href="#rfc.section.3.3.1">3.3.1.</a> <a href="#updates-to-rfc-8182-1" id="updates-to-rfc-8182-1">Updates to RFC 8182</a>
 </h1>
